--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.core": "14.0.8",
     "com.unity.render-pipelines.high-definition": "14.0.8",
     "com.unity.render-pipelines.universal": "14.0.8",
